--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -226,7 +226,7 @@ img {
         svg {
             width: 40px;
             height: 40px;
-        };
+        }
         @include responsive(xs-sm) {
             width: 30px;
             height: 30px;
@@ -289,6 +289,15 @@ img {
         .wp-block-button__link {
             border-width: 1px;
             padding: 16px 25px;
+        }
+    }
+    &.is-style-outline-v2 {
+        .wp-block-button__link {
+            border-radius: 0px;
+            padding: 0;
+            border-top: none;
+            border-left: none;
+            border-right: none;
         }
     }
 }
