--- a/style.css
+++ b/style.css
@@ -11501,6 +11501,8 @@ img {
     border-left: none;
     border-right: none;
     border-bottom: none; }
+    .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:hover, .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:active, .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:focus {
+      border-bottom: 1px solid; }
 
 .wp-block-button__link.wp-block-button__link {
   font-size: inherit;
