--- a/style.css
+++ b/style.css
@@ -11500,9 +11500,9 @@ img {
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: none; }
+    border-bottom-color: var(--bs-black); }
     .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:hover, .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:active, .wp-block-button.wp-block-button.is-style-outline-v2 .wp-block-button__link:focus {
-      border-bottom: 1px solid; }
+      border-bottom-color: 1px solid; }
 
 .wp-block-button__link.wp-block-button__link {
   font-size: inherit;
