--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -31,6 +31,7 @@
                 img {
                     height: 18px;
                     object-fit: contain;
+                    width: auto;
                 }
             }
             .listings--inner {
