--- a/style.css
+++ b/style.css
@@ -12294,9 +12294,20 @@ h5, .h5 {
     object-fit: contain;
     width: auto; }
   .listings-style-1 .swiper-listings-taxonomy .swiper-slide .listings--inner {
-    cursor: pointer; }
+    cursor: pointer;
+    position: relative; }
+    .listings-style-1 .swiper-listings-taxonomy .swiper-slide .listings--inner .listing--model-link {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 1; }
     .listings-style-1 .swiper-listings-taxonomy .swiper-slide .listings--inner.active {
       background-color: var(--lightgray-2); }
+    @media screen and (min-width: 992px) {
+      .listings-style-1 .swiper-listings-taxonomy .swiper-slide .listings--inner.has-model-layout .listing--model-link {
+        display: none; } }
 
 .listings--posts {
   display: none;
