--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -36,8 +36,24 @@
             }
             .listings--inner {
                 cursor: pointer;
+                position: relative;
+                .listing--model-link {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    z-index: 1;
+                }
                 &.active {
                     background-color: var(--lightgray-2);
+                }
+                &.has-model-layout {
+                    @include responsive(md-lg) {
+                        .listing--model-link {
+                            display: none;
+                        }
+                    }
                 }
             }
         }
