--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -63,4 +63,9 @@
             }
         }
     }
+    .listings-taxonomy-holder {
+        max-width: 230px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
