--- a/style.css
+++ b/style.css
@@ -11335,10 +11335,8 @@ img {
     width: 100%;
     height: 100%;
     object-fit: var(--fit, cover); }
-  .image-style.image-style-contain {
-    padding: 0; }
-    .image-style.image-style-contain img {
-      object-fit: contain; }
+  .image-style.image-style-contain img {
+    object-fit: var(--fit, contain); }
 
 .site-content > .wp-block-group {
   overflow: hidden; }
