--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -89,7 +89,7 @@ img {
     }
     &.image-style-contain {
         img {
-            object-fit: var(--fit, contain);
+            object-fit: var(--fit, contain) !important;
         }
     }
 }
