--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -94,7 +94,7 @@ img {
     }
     &.image-style-2 {
         background-color: var(--lightgray);
-        padding: 25%;
+        --padding: 25%;
         img {
             width: 75%;
             top: 50%;
