--- a/style.css
+++ b/style.css
@@ -11338,7 +11338,8 @@ img {
   .image-style.image-style-contain img {
     object-fit: var(--fit, contain) !important; }
   .image-style.image-style-2 {
-    background-color: var(--lightgray); }
+    background-color: var(--lightgray);
+    padding: 25%; }
     .image-style.image-style-2 img {
       width: 75%;
       top: 50%;
