--- a/style.css
+++ b/style.css
@@ -11339,7 +11339,7 @@ img {
     object-fit: var(--fit, contain) !important; }
   .image-style.image-style-2 {
     background-color: var(--lightgray);
-    padding: 25%; }
+    --padding: 25%; }
     .image-style.image-style-2 img {
       width: 75%;
       top: 50%;
