--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -90,7 +90,10 @@
     }
 }
 
-
 .listing--buttons {
-    
+    button {
+        background-color: transparent;
+        border: none;
+        border-bottom: 1px solid;
+    }
 }
