--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -90,7 +90,7 @@
     }
 }
 
-.listing--buttons {
+.listing--buttons.listing--buttons {
     button {
         background-color: transparent;
         border: none;
