--- a/style.css
+++ b/style.css
@@ -12346,7 +12346,7 @@ h5, .h5 {
   .listing--features li {
     border-bottom: 1px solid var(--dark); }
 
-.listing--buttons button {
+.listing--buttons.listing--buttons button {
   background-color: transparent;
   border: none;
   border-bottom: 1px solid; }
