--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -213,7 +213,7 @@ img {
 .offcanvas.offcanvas {
     max-width: 1000px;
     width: 100%;
-    z-index: 99999;
+    z-index: 99999999;
 
     .btn-close.btn-close {
         position: absolute;
