--- a/style.css
+++ b/style.css
@@ -11442,7 +11442,7 @@ img {
 .offcanvas.offcanvas {
   max-width: 1000px;
   width: 100%;
-  z-index: 99999; }
+  z-index: 99999999; }
   .offcanvas.offcanvas .btn-close.btn-close {
     position: absolute;
     left: 0;
