--- a/style.css
+++ b/style.css
@@ -12351,6 +12351,9 @@ h5, .h5 {
   border: none;
   border-bottom: 1px solid; }
 
+.offcanvas--layouts.offcanvas--layouts.offcanvas--layouts {
+  max-width: 1200px; }
+
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
 /*-----------------------------------------------------------------------------------*/
