--- a/style.css
+++ b/style.css
@@ -12353,6 +12353,15 @@ h5, .h5 {
 
 .offcanvas--layouts.offcanvas--layouts.offcanvas--layouts {
   max-width: 1200px; }
+  .offcanvas--layouts.offcanvas--layouts.offcanvas--layouts .embed-holder {
+    padding: 40%; }
+    .offcanvas--layouts.offcanvas--layouts.offcanvas--layouts .embed-holder iframe {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      object-fit: cover; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
