--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -100,7 +100,17 @@
 
 .offcanvas--layouts.offcanvas--layouts.offcanvas--layouts {
     max-width: 1200px;
-    iframe {
-        
+    .embed-holder {
+        padding: 40%;
+        iframe {
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
