--- a/style.css
+++ b/style.css
@@ -12361,7 +12361,9 @@ h5, .h5 {
       top: 0;
       right: 0;
       bottom: 0;
-      object-fit: cover; }
+      object-fit: cover;
+      width: 100%;
+      height: 100%; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
