--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -91,7 +91,8 @@
 }
 
 .listing--buttons.listing--buttons {
-    button {
+    button,
+    a {
         background-color: transparent;
         border: none;
         border-bottom: 1px solid;
