--- a/style.css
+++ b/style.css
@@ -12252,6 +12252,9 @@ h5, .h5 {
   margin-left: auto;
   margin-right: auto; }
 
+.svg-logo.svg-logo svg {
+  width: 244px; }
+
 .bottom-footer .container > div {
   border-top: 1px solid #D3D3D3;
   padding-top: 30px;
