--- a/style.css
+++ b/style.css
@@ -12203,6 +12203,8 @@ h5, .h5 {
     left: 0;
     right: 0;
     top: var(--admin-bar-height); }
+  #masthead.header-default .svg-logo {
+    color: var(--bs-black); }
   #masthead.header-default .menu-burger .bar {
     background-color: var(--bs-black); }
   #masthead.header-default + #main {
