--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -8,7 +8,7 @@
     }
     &.header-default {
         .svg-logo {
-            color: var(--bs-black);
+            color: var(--logo-color);
         }
         .menu-burger .bar {
             background-color: var(--bs-black);
