--- a/assets/stylesheets/utils/_variables.scss
+++ b/assets/stylesheets/utils/_variables.scss
@@ -6,6 +6,7 @@ $image-url: "./assets/images/" !default;
 $font-url: "./assets/fonts/" !default;
 
 :root {
+    --logo-color: #282d32;
     --dark: #1c272e;
     --maroon: #841d26;
     --lightgray: #f2f2f2;
