--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -26,9 +26,8 @@ p:last-child {
     margin-bottom: 0 !important;
 }
 a {
-    color: var(--orange-color);
     @include on-event {
-        color: var(--accent-color);
+        color: var(--maroon);
     }
 }
 
