--- a/style.css
+++ b/style.css
@@ -11308,6 +11308,8 @@ img {
     justify-content: space-between;
     padding: 20px;
     width: 100%; }
+    .nav-tabs.style-2 .nav-link:hover, .nav-tabs.style-2 .nav-link:active, .nav-tabs.style-2 .nav-link:focus {
+      color: var(--maroon); }
     .nav-tabs.style-2 .nav-link:after {
       content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/></svg>'); }
     .nav-tabs.style-2 .nav-link.active {
