--- a/style.css
+++ b/style.css
@@ -11854,6 +11854,19 @@ img {
   background-size: cover;
   background-position: center;
   opacity: 1; }
+  .bg-overlay-1.bg-overlay-1.bg-overlay-1.bg-overlay-1 .wp-block-cover__background:before, .bg-overlay-1.bg-overlay-1.bg-overlay-1.bg-overlay-1 .wp-block-cover__background:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    left: 0; }
+  .bg-overlay-1.bg-overlay-1.bg-overlay-1.bg-overlay-1 .wp-block-cover__background:before {
+    top: 0;
+    height: 35%;
+    background: transparent linear-gradient(180deg, #000000 0%, #00000000 100%) 0% 0% no-repeat; }
+  .bg-overlay-1.bg-overlay-1.bg-overlay-1.bg-overlay-1 .wp-block-cover__background:after {
+    bottom: 0;
+    background: transparent linear-gradient(0deg, #000000 0%, #00000000 100%) 0% 0% no-repeat;
+    height: 35%; }
 
 .overflow-unset {
   overflow: unset !important;
