--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -397,6 +397,7 @@
             position: absolute;
             right: 0;
             left: 0;
+            opacity: 0.9;
         }
         @include before {
             top: 0;
