--- a/style.css
+++ b/style.css
@@ -11539,6 +11539,14 @@ img {
   height: 18px;
   width: auto; }
 
+.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 {
+  display: flex;
+  position: absolute;
+  right: 0;
+  bottom: 0; }
+  .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div {
+    position: static; }
+
 @media (min-width: 1500px) {
   .container {
     max-width: 1420px; } }
