--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -351,6 +351,9 @@ img {
     right: 0;
     bottom: 0;
     width: 50%;
+    --swiper-navigation-color: var(--bs-white);
+    --swiper-pagination-bullet-inactive-color: var(--bs-white);
+    --swiper-pagination-bullet-inactive-opacity: 1;
     > div {
         position: static;
     }
