--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -347,6 +347,7 @@ img {
 
 .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 {
     display: flex;
+    align-items: center;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -354,6 +355,7 @@ img {
     --swiper-navigation-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-opacity: 1;
+    --swiper-navigation-size: 10px;
     > div {
         position: static;
     }
