--- a/style.css
+++ b/style.css
@@ -11541,13 +11541,15 @@ img {
 
 .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 {
   display: flex;
+  align-items: center;
   position: absolute;
   right: 0;
   bottom: 0;
   width: 50%;
   --swiper-navigation-color: var(--bs-white);
   --swiper-pagination-bullet-inactive-color: var(--bs-white);
-  --swiper-pagination-bullet-inactive-opacity: 1; }
+  --swiper-pagination-bullet-inactive-opacity: 1;
+  --swiper-navigation-size: 10px; }
   .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div {
     position: static; }
 
