--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -349,6 +349,7 @@ img {
     display: flex;
     align-items: center;
     position: absolute;
+    justify-content: flex-end;
     right: 0;
     bottom: 0;
     width: 50%;
@@ -356,7 +357,15 @@ img {
     --swiper-pagination-bullet-inactive-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-opacity: 1;
     --swiper-navigation-size: 10px;
+    --gap: 40px;
     > div {
         position: static;
+        transform: none;
+        margin: 0;
+        gap: var(--gap);
+        &.swiper-pagination {
+            width: auto;
+            gap: var(--gap);
+        }
     }
 }
