--- a/style.css
+++ b/style.css
@@ -11558,7 +11558,8 @@ img {
     margin: 0;
     gap: var(--gap); }
     .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div.swiper-pagination {
-      width: auto; }
+      width: auto;
+      gap: var(--gap); }
 
 @media (min-width: 1500px) {
   .container {
