--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -354,6 +354,7 @@ img {
     bottom: 0;
     width: 50%;
     --swiper-navigation-color: var(--bs-white);
+    --swiper-pagination-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-opacity: 1;
     --swiper-navigation-size: 10px;
