--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -370,10 +370,14 @@ img {
             gap: var(--gap);
             display: flex;
             counter-reset: section;
-            > div {
+             .swiper-pagination-bullet {
                 margin: 0;
                 width: auto;
                 height: auto;
+                border-bottom: 1px solid transparent;;
+                &.swiper-pagination-bullet-active{
+                    border-bottom: 1px solid var(--bs-white);
+                }
                 &:before {
                     content: counter(section);
                 }
