--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -360,7 +360,6 @@ img {
     --swiper-navigation-size: 10px;
     --gap: 1.5vw;
     gap: var(--gap);
-    line-height: 0;
     > div {
         position: static;
         transform: none;
@@ -370,15 +369,17 @@ img {
             gap: var(--gap);
             display: flex;
             counter-reset: section;
-             .swiper-pagination-bullet {
+            .swiper-pagination-bullet {
                 margin: 0;
                 width: auto;
                 height: auto;
-                border-bottom: 1px solid transparent;;
-                &.swiper-pagination-bullet-active{
+                border-bottom: 1px solid transparent;
+                background-color: transparent;
+                &.swiper-pagination-bullet-active {
                     border-bottom: 1px solid var(--bs-white);
                 }
                 &:before {
+                    counter-increment: section;
                     content: counter(section);
                 }
             }
