--- a/style.css
+++ b/style.css
@@ -11553,8 +11553,7 @@ img {
   --swiper-pagination-bullet-inactive-opacity: 1;
   --swiper-navigation-size: 10px;
   --gap: 1.5vw;
-  gap: var(--gap);
-  line-height: 0; }
+  gap: var(--gap); }
   .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div {
     position: static;
     transform: none;
@@ -11568,7 +11567,8 @@ img {
         margin: 0;
         width: auto;
         height: auto;
-        border-bottom: 1px solid transparent; }
+        border-bottom: 1px solid transparent;
+        background-color: transparent; }
         .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
           border-bottom: 1px solid var(--bs-white); }
         .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div.swiper-pagination .swiper-pagination-bullet:before {
