--- a/style.css
+++ b/style.css
@@ -11572,6 +11572,7 @@ img {
         .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
           border-bottom: 1px solid var(--bs-white); }
         .swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2.swiper-pagination-navigation-style-2 > div.swiper-pagination .swiper-pagination-bullet:before {
+          counter-increment: section;
           content: counter(section); }
 
 @media (min-width: 1500px) {
