--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -375,12 +375,14 @@ img {
                 height: auto;
                 border-bottom: 1px solid transparent;
                 background-color: transparent;
+                border-radius: 0;
                 &.swiper-pagination-bullet-active {
                     border-bottom: 1px solid var(--bs-white);
                 }
                 &:before {
                     counter-increment: section;
                     content: counter(section);
+                    font-size: 16px;
                 }
             }
         }
