--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -388,3 +388,11 @@ img {
         }
     }
 }
+
+.swiper-slider-holder {
+    &.swiper-nav-style-2 {
+        @include responsive(xs-sm) {
+            padding-bottom: 50px;
+        }
+    }
+}
