--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -387,6 +387,9 @@ img {
             }
         }
     }
+    @include responsive(xs-sm) {
+        gap: 20px;
+    }
 }
 
 .swiper-slider-holder {
