--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -426,7 +426,11 @@
     }
 }
 
-.columns-4 {
+.columns-4.columns-4.columns-4 {
+    @include responsive(xs-md) {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 30px;
+    }
     @include responsive(xs-sm) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 30px;
