--- a/style.css
+++ b/style.css
@@ -11924,12 +11924,16 @@ img {
     .w-100-sm > * {
       max-width: 100% !important; } }
 
+@media screen and (max-width: 1199px) {
+  .columns-4.columns-4.columns-4 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 30px; } }
 @media screen and (max-width: 991px) {
-  .columns-4 {
+  .columns-4.columns-4.columns-4 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 30px; } }
 @media screen and (max-width: 575px) {
-  .columns-4 {
+  .columns-4.columns-4.columns-4 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 20px; } }
 
