--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -406,6 +406,9 @@ img {
 .checklists {
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     li {
         display: flex;
         align-items: center;
