--- a/style.css
+++ b/style.css
@@ -11586,7 +11586,16 @@ img {
 
 .checklists {
   list-style: none;
-  padding: 0; }
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px; }
+  .checklists li {
+    display: flex;
+    align-items: center;
+    gap: 10px; }
+    .checklists li:before {
+      content: ''; }
 
 @media (min-width: 1500px) {
   .container {
