--- a/style.css
+++ b/style.css
@@ -11595,7 +11595,17 @@ img {
     align-items: center;
     gap: 10px; }
     .checklists li:before {
-      content: ''; }
+      content: "";
+      display: inline-block;
+      width: 14px;
+      height: 7px;
+      border-left: 2px solid var(--maroon);
+      border-bottom: 2px solid var(--maroon);
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
 
 @media (min-width: 1500px) {
   .container {
