--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -431,4 +431,9 @@ img {
 
 .accordion.accordion {
     --bs-accordion-border-width: 0;
+    --bs-accordion-inner-border-radius: 0;
+    --bs-accordion-active-bg: var(--lightgray-2);
+    .accordion-button {
+        box-shadow: none;
+    }
 }
